# protocol-gateway

./: Cargo.toml  README.md  cardano_protocols_research.md
.claude/skills/analyze-protocol/: SKILL.md
.github/workflows/: tests.yml
design/: 001-api-scaffolding-spec.md  002-openrpc-discovery-spec.md
design/001-assets/: c4-container.puml  c4-context.puml
protocols/: ticketing-2026.tii
protocols_tx3/: B2-successful-api-calls.md
protocols_tx3/bodega-market/: .env.mainnet  README.md  bodega-market-costs.md  bodega-market-onchain-analysis.md  bodega-market-research.md  implementation-report.md  main.tx3  trix.toml  tx3-limitations-bodega-market.md
protocols_tx3/bodega-market/invoke-args/: buy_position_no.json  buy_position_yes.json  comparison-report.md  create_market.json  sell_position_no.json  sell_position_yes.json  submit_reward_no.json  submit_reward_yes.json
protocols_tx3/fluid-aquarium/: .env.mainnet  README.md  main.tx3  trix.toml
protocols_tx3/fluid-aquarium/investigacion/: on-chain-research.md  tx3-limitations-aquarium.md
protocols_tx3/indigo/: .env.mainnet  README.md  devnet.toml  main.tx3  trix.toml
protocols_tx3/snek-fun/: .env.mainnet  README.md  main.tx3  trix.toml
protocols_tx3/strike-staking/: .env.mainnet  README.md  devnet.toml  main.tx3  session-prompt.md  strike-staking-research.md  trix.toml  tx3-limitations-strike-staking.md
protocols_tx3/vyfi/: .env.mainnet  README.md  main.tx3  trix.toml
src/: config.rs  main.rs  server.rs
src/registry/: mod.rs
src/rpc/: discover.rs  dispatcher.rs  error.rs  handler.rs  mod.rs
(+40 files in other folders)
