[package]
name = "api-layer-tx3-protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors"] }
tx3-sdk = "0.9.2"
